--- a/web_dynamic/templates/3-hbnb.html
+++ b/web_dynamic/templates/3-hbnb.html
@@ -44,7 +44,7 @@
 	    <ul>
 	      {% for amenity in amenities %}
 	      <li>
-			<input data-id="{{amenity.id}}" data-name="{{amenity.name}}" type="checkbox">
+			<input data-id="{{amenity.id}}" data-name="{{amenity.name}}" type="checkbox" style="margin-right: 10px;">
 			{{ amenity.name }}
 		  </li>
 	      {% endfor %}
