--- a/web_dynamic/static/styles/6-filters.css
+++ b/web_dynamic/static/styles/6-filters.css
@@ -55,6 +55,14 @@ button:hover {
     border-right: 1px solid #DDDDDD;
 }
 
+.locations h4 {
+    text-overflow: ellipsis;
+    overflow: hidden;
+    width: 100%;
+    height: 1.2em;
+    white-space: nowrap
+}
+
 .amenities {
     height: 100%;
     width: 25%;
